# Sweater

./: .gitignore  pyproject.toml
application/: .env-example  Dockerfile  docker-compose.yml  pyproject.toml
application/application/: middleware.py  settings.py  urls.py
application/base/: forms.py  models.py  urls.py  views.py
application/base/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_user_subscriptions.py
application/base/templates/base/: 404.html  edit_user_profile.html  followers_subscriptions.html  login_register_page.html  search.html  user_profile.html
application/posts/: admin.py  forms.py  models.py  urls.py  views.py
application/posts/migrations/: 0001_initial.py  0002_comment_parent_comment.py
application/posts/templates/posts/: comments_for_post.html  comments_list.html  edit_post.html  new_post.html  post.html  post_component.html  post_or_comments.html  posts_grid.html  posts_list.html
application/static/css/: bootstrap-reboot.css  bootstrap-reboot.rtl.min.css  bootstrap-utilities.css  bootstrap-utilities.rtl.min.css  bootstrap.css  bootstrap.rtl.css  bootstrap.rtl.min.css  sweater.css
application/static/js/: sweater.js
application/templates/: base.html  main.html  sidebar.html
